tests/negative/Test20.sp
(* Testing wrong name for variable *)
2pi:String = i;